Secure all endpoints